# PythonWorkshop

./: Dockerfile  pyproject.toml
docs/: .buildinfo  genindex.html  intro.html  search.html  searchindex.js
docs/.github/ISSUE_TEMPLATE/: bug_report.html  feature_request.html
docs/prodigiouspython/Chapter_1/: 10_String_representations_of_objects.html  11_Installing_Packages.html  12_Help_Utility.html  1_Getting_Started_With_Python_Language.html  2_Creating_Variables_and_Assigning_Values.html  3_Keywords_and_Variable_naming.html  4_Datatypes.html  5_Collection_Types.html  6_IDEs_for_Python.html  7_User_Input.html  8_Builtins.html  9_Modules.html
docs/prodigiouspython/Chapter_2/: 1_Indentation.html
docs/prodigiouspython/Chapter_3/: 1_Comments_and_docstrings.html
docs/prodigiouspython/Chapter_4/: 1_Functions.html  2_Positional_Arguments.html  3_Unnamed_Positional_Arguments.html  4_Keyword_only_arguments.html  5_Keyword_arguments.html  6_Default_Arguments.html  7_TLDR_about_Functions_arguments.html  8_Lambda_functions.html
docs/prodigiouspython/Chapter_5/: 1_Mathematical_Operators.html  2_Boolean_Operators.html  3_Comparison_Operators.html
docs/prodigiouspython/Chapter_6/: 1_Conditionals.html
docs/prodigiouspython/Chapter_7/: 1_Loops.html
docs/prodigiouspython/Chapter_8/: 1_Classes.html  2_Class_Attributes.html  3_Class_Static_Methods.html
