[tool.poetry]
name = "ProdigiousPython"
version = "0.1.0"
description = ""
authors = ["Prodigious Python"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.26.0"
jupyterlab = "^4.2.3"

[tool.poetry.group.dev.dependencies]
jupyter-book = "^1.0.0"
sphinx-sitemap = "^2.6.0"
pytest = "^8.3.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
black-nb = "^0.7"
pyppeteer = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
